update dependency versions, remove all warnings